--- a/Sheet2/Views/Loan/Index.cshtml
+++ b/Sheet2/Views/Loan/Index.cshtml
@@ -6,16 +6,18 @@
 <h2>Simple/Monthly Compound Interest Investment</h2>
 
 <form method="post">
-    Initial Investment <input type="number" min="0" placeholder="1000.00" step="0.01" name="value" value="@ViewData["Value"]"/><br />
-    Interest Rate <input type="number" min="0" placeholder="1.850" step="0.001" name="rate" value="@ViewData["Rate"]"/><br />
-    Term of Investment <input type="number" min="0" placeholder="5" step="1" name="years" value="@ViewData["Years"]"/><br />
+    Initial Investment <input type="number" min="0" placeholder="1000.00" step="0.01" name="value" value="@ViewData["Value"]" required/><br />
+    Interest Rate <input type="number" min="0" placeholder="1.850" step="0.001" name="rate" value="@ViewData["Rate"]" required/><br />
+    Term of Investment <input type="number" min="0" placeholder="5" step="1" name="years" value="@ViewData["Years"]" required/><br />
     <br />
     <input type="submit" value="Invest!" />
 </form>
 
 @if(ViewData["SimpleAmount"] != null && ViewData["CompoundAmount"] != null)
 {
-<h3>Given @ViewData["Years"] years, an investment of @Convert.ToDecimal(@ViewData["Value"]).ToString("C"), and an annual rate of %@ViewData["Rate"], you will have <strong>@Convert.ToDecimal(ViewData["SimpleAmount"]).ToString("C")</strong> with simple  interest and <strong>@Convert.ToDecimal(ViewData["CompoundAmount"]).ToString("C")</strong> with compund interest.</h3>
+<h3>Given @ViewData["Years"] years, an investment of @Convert.ToDecimal(@ViewData["Value"]).ToString("C"),
+    and an annual rate of %@ViewData["Rate"], you will have <strong>@Convert.ToDecimal(ViewData["SimpleAmount"]).ToString("C")</strong>
+    with simple  interest and <strong>@Convert.ToDecimal(ViewData["CompoundAmount"]).ToString("C")</strong> with compund interest.</h3>
 }
 
 
